src/js/components/shared/aside/aside.style.css
:root{
    --aside-width:300px;
    --aside-none:-300px;
}

#header{
    width: var(--aside-width);
    background-color: #021124;
    padding: 0 15px;

    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    overflow-y: auto;
    transition: all ease-in-out 0.5s;
    z-index: 20;
}

#header .profile img{
    margin: 15px auto;
    display: block;
    width: 120px;
    border: 8px solid #2c2f3f;
    border-radius: 50%;
}

#header .profile h1{
    font-size: 24px;
    margin: 0;
    padding: 0;
    font-weight: 600;
    -moz-text-align-last: center;
    text-align: center;
    color: #fff;
}

#header .profile .social-links a{
    font-size: 1rem;
    background-color: #212431;
    color: #fff;
    padding: 0.6rem;
    margin-right: 1rem;
    border-radius: 50%;
    transition: 0.3s;
    text-decoration: none;
}

#header .profile .social-links a:hover{
    background: #149ddd;
}

.nav-menu{
    padding:1.5rem;
}

.nav-menu a,
.nav-menu a:focus{
    display: flex;
    align-items: center;
    color: #a8a9b4;
    transition: 0.3s;
    font-size: 15px;
}

.nav-menu a i,
.nav-menu a:focus i {
    font-size: 24px;
    padding: 0.8rem;
    color: #6f7180;
}

.nav-menu a:hover,
.nav-menu .active,
.nav-menu .active:focus,
.nav-menu li:hover > a {
    text-decoration: none;
    color: #fff
}

.nav-menu a:hover i,
.nav-menu .active i,
.nav-menu .active:focus i,
.nav-menu li:hover > a i{
    color: #149ddd;
}

#nav-btn{
    font-size: 2rem;
    position: fixed;
    top: 1rem;
    right: 1rem;
    z-index: 19;

    background-color: #252c90;
    border-radius: 50%;
    cursor:pointer;
    color: #fff;
    width: 45px;
    height: 45px;

    display: none;
    justify-content: center;
    align-items: center;
}

@media (max-width:1024px) {
    #header{
        margin-left: var(--aside-none);
        overflow-y: hidden;
    }

    #header.active{
        margin-left: 0;
        overflow-y: auto;
    }

    #nav-btn{
        display: flex;
    }
}

